<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_header">
        <EditTextPreference
            app:key="name"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="avatar"
            app:title="@string/changeAvatar"/>
        <Preference
            app:key="logout"
            app:title="@string/logout" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/behaviour_header">

        <SwitchPreferenceCompat
            app:key="deep"
            app:summaryOff="@string/deep_summary_off"
            app:summaryOn="@string/deep_summary_on"
            app:title="@string/deep_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <SwitchPreferenceCompat
            app:key="dark"
            app:title="@string/dark_title" />

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>