<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_green1">

    <include
        android:id="@+id/nav_view"
        layout="@layout/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievement"
        android:textColor="@color/WhiteSmoke"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btn_record"
        android:onClick="onRecordClick"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_focus_background"
        android:text="@string/record_history"
        android:textColor="@color/WhiteSmoke"
        android:textIsSelectable="false"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_collection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_collection"
        android:onClick="onCollectionClick"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/btn_focus_background"
        android:text="@string/collections"
        android:textColor="@color/WhiteSmoke"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>